# bruce-messenger-fun

./: README.md
client-connect/: Cargo.toml
client-connect/src/: main.rs
holonet-g/: .gitignore  Cargo.toml  Dockerfile  README.md  ops.sh
holonet-g/client_test/: client.html
holonet-g/src/: lib.rs  main.rs  server.rs
holonet-g/src/holo/: holo_api.rs  holo_client.rs  holo_errors.rs  holocaster.rs  mod.rs
holonet-g/src/model/: channel.rs  message.rs  mod.rs  session.rs
server-chat/: Cargo.toml
server-chat/src/: main.rs
socket-fun/: Cargo.toml
socket-fun-client/: Cargo.toml
socket-fun/src/: main.rs
ws-impl/: Cargo.toml
ws-impl/src/: error.rs  lib.rs  server.rs  utils.rs
ws-impl/src/holo/: handshake.rs
