[package]
authors = ["Bruce Bjorklund <bjorklund.bruce@gmail.com>"]
edition = "2018"
name = "holonet"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
env_logger = "0.8.2"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
tokio = {version = "1.2.0", features = ["full"]}
tokio-stream = {version = "0.1.5", features = ["sync"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
warp = "0.3.0"
