[package]
name = "server"
version = "0.1.0"
authors = ["bjorklund.bruce@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
log = "0.4.14"
env_logger = "0.8.2"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }